added atlas connection string

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 5001
-DATABASE = mongodb://127.0.0.1:27017/CUNGA_DB
+MONGO_URL = mongodb+srv://qwerty:qwerty@123@qwerty.cdzpl.mongodb.net/LBMS
 PASSWORD = helloiamsarah
 EMAIL_USER = mugishakundasarah@gmail.com
 EMAIL_PASS = h8ll42u@!@!@!
