--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 5001
 MONGO_URL = mongodb+srv://qwerty:qwerty@123@qwerty.cdzpl.mongodb.net/LBMS
-EMAIL_USER = qwertygroup0@gmail.com
-EMAIL_PASS = *qwerty1.1
+EMAIL_USER = mugishakundasarah@gmail.com
+EMAIL_PASS = 28!01@2020
 CLOUD_NAME = dfc7c3dhn 
 JWT_KEY = brilliant
 API_KEY = 139468582761811
