--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
     "date-and-time": "^0.14.2",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.11",
     "mongoose-paginate-v2": "^1.3.13",
     "multer": "^1.4.2",
